--- a/main.tex
+++ b/main.tex
@@ -58,7 +58,7 @@
 
 
 \author{Ali Seyhun Saral\thanks{Max Planck Institute for Research on Collective Goods, Bonn, Germany.}}  
-\date{August 2020}
+\date{September 2020}
 \begin{document}
 \onehalfspacing
 \sloppy
@@ -67,35 +67,31 @@
 
 \thispagestyle{plain}
 
-In this study, we investigate conditional types and their evolution in an iterated Prisoner's Dilemma, comparing different continuation probabilities, by using a computational model. In our setting, agents are characterized by their responses to each level of cooperation in a linearly extended Prisoner's Dilemma. By using repeated simulations, we estimate the likelihood of cooperation and the conditional strategies that are likely to succeed. 
 
-Our results show that, when the continuation probability is sufficiently large, full cooperation is achieved. In this case, the most successful strategies are the ones who employ an all-or-none type of conditional cooperation, followed by perfect conditional cooperators. In the intermediate levels of continuation probability, however, \textit{hump-shaped} contributor types are the ones that are most likely to exist, followed by imperfect conditional cooperators. Those agents cooperate in a medium level of cooperation within themselves and each other. 
+In this study, I investigate conditional strategies and their evolution in an extension of iterated Prisoner's Dilemma Game. The agents are characterized by their initial move and their conditional responses to each level of cooperation. By using simulations, I estimate the likelihood of cooperation for different probability of repetitions.
 
-Our results provide an explanation for the commonly observed hump-shaped strategy and imperfect conditional cooperators in experiments. Furthermore, a potential implication of our results is that the heterogeneity of conditional strategies might stem from the diverse interaction frequencies among real-world interactions. 
+I show that, when the continuation probability is sufficiently large, high levels cooperation is achieved. In this case, the most successful strategies are those who employ an \textit{all-or-none} type of conditional cooperation, followed by perfect conditional cooperators. In intermediate levels of continuation probabilities, however, \textit{hump-shaped} contributor types are the ones that are most likely to thrive, followed by imperfect conditional cooperators. Those agents cooperate in a medium level of cooperation within themselves and each other. The results explain the existence of hump-shaped type of cooperators with a purely payoff-based reasoning, as opposed to previous attempts to explain this strategy with psychological mechanisms. 
 
 \textbf{Keywords}: reciprocity | conditional cooperation | reactive strategies | hump-shaped contributors 
 \end{abstract}
 
 \section{Introduction} 
-Humans are distinct in their cooperation capability, if not unique \citep[See][]{Bowles2011,Wilson2012}. As a species, we heavily depend on the mutual cooperation of individuals. At first glance, from an evolutionary perspective, it seems counter-intuitive for  individuals to care for the others: if everybody is cooperating in a population, any fraction of selfish individuals would do better than those who care, and would therefore have a higher evolutionary fitness. As it would be easy to exploit the cooperators in such a population, it is just matter of time for cooperation to be eradicated. Then, how come cooperation is so common in some species including us humans?
+Humans are distinct in their cooperation capabilities, if not unique \citep[See][]{Bowles2011,Wilson2012}. As a species, we heavily depend on the mutual cooperation of individuals. At first glance, from an evolutionary perspective, it seems counter-intuitive for  individuals to care for the others: if everybody is cooperating in a population, any fraction of selfish individuals would do better than those who care, and would therefore have a higher evolutionary fitness. As it would be easy to exploit the cooperators in such a population, it is just matter of time for cooperation to be eradicated. Then, how come cooperation is so common in some species including us humans?
 
- Several explanations have been put forward to explain this puzzle.\footnote{See \citet{Nowak2006} for a summary of some of these mechanisms.} One of the most prominent answers has been reciprocal altruism. The earliest systematic thoughts on the evolution of reciprocal altruism can be found in the writings of the Russian thinker Kropotkin in the early 20th century. In his book \textit{Mutual Aid}, he discusses the evolutionary success of solidarity with some examples from animal groups and human societies in historical perspective \citep{Kropotkin1902-mo}. ``\textit{(...) Natural selection continually must eliminate (anti-social instincts), because in the long run the practice of solidarity proves much more advantageous to the species than the development of individuals endowed with predatory inclinations}'', he asserts \citep[p.~18]{Kropotkin1902-mo}. His arguments today can be interpreted as a mixture of different mechanisms such as reciprocal altruism, group selection and kin selection. It was not until more than half a century later that the biologist Robert Trivers coined the term \textit{reciprocal altruism} and explained its role in the context of cooperation by way of a formal model \citep{Trivers1971}. By using Hamilton's methodology of kin selection \citep{Hamilton1964}, Trivers showed that, given that there is a positive probability for individuals to interact again, if the benefit of an aid is sufficiently greater than its cost, then cooperation of unrelated individuals can arise. Trivers's treatise on reciprocity has been highly influential, especially in the field of theoretical biology. 
+Several explanations have been put forward to explain this puzzle.\footnote{See \citet{Nowak2006} for a summary of some of these mechanisms.} One of the most prominent answers has been reciprocal altruism \citep{Trivers1971, Axelrod1981-ot, may1987more, nowak1992tit,Nowak1993-gl}. 
+Given that there is a positive probability for individuals to interact again, if the benefit of an aid is sufficiently greater than its cost, then cooperation of unrelated individuals can arise. In game theory literature, Folk theorems show that, if the threat of defection is present in the future, cooperating today is more beneficial; therefore, a cooperative strategy in the stage game, as well as any other individually rational strategy, can be the equilibrium of the supergame \citep{Friedman1971-nz, Fudenberg1986-dz}. In addition to that, \citeauthor{Axelrod1980a}'s simulations on the Prisoner's Dilemma  support those theoretical results by showing that the reciprocal \textit{tit-for-tat} is a strong strategy that allows cooperation while it is immune to exploitation by selfish players \citep{Axelrod1980a,Axelrod1980b,Axelrod1981-ot}. 
 
-In game theory literature, Folk theorems show that, if the threat of defection is present in the future, cooperating today is more beneficial; therefore, a cooperative strategy in the stage game, as well as any other individually rational strategy, can be the equilibrium of the supergame \citep{Friedman1971-nz, Fudenberg1986-dz}. In addition to that, \citeauthor{Axelrod1980a}'s simulations on the Prisoner's Dilemma  support those theoretical results by showing that the reciprocal \textit{tit-for-tat} is a strong strategy that allows cooperation while it is immune to exploitation by selfish players \citep{Axelrod1980a,Axelrod1980b,Axelrod1981-ot}. 
+With these scientific accounts, a rather optimistic picture of cooperation through reciprocity has been drawn. The main dynamics of cooperation through reciprocity can be summarized as follows: reciprocators cooperate among each other as they reciprocate kindness over time. Therefore they receive a higher payoff than the selfish types who meet other selfish types. And when a reciprocator meets a selfish type, the reciprocator responds selfishly after the first defection. Thus, the exploitation of a reciprocator by a selfish individual is not sustainable when the probability of future interaction is sufficiently high. 
 
-With these scientific accounts, a rather optimistic picture of cooperation through reciprocity has been drawn. The main dynamics of cooperation through reciprocity can be summarized as follows: reciprocators cooperate among each other as they reciprocate kindness over time. Therefore they receive a higher payoff than the selfish types who meet other selfish types. And when a reciprocator meets a selfish type, the reciprocator responds selfishly after the first defection. Thus, the exploitation of a reciprocator by a selfish individual is not sustainable when the probability of continuation is sufficiently high. 
+Nevertheless, with the rise of experimental economics, empirical evidence on the Prionser's Dilemma and the Public Goods Game draws a rather different picture: cooperation tends to decline over time, whether subjects play the game within the same group or matched with others \citep{Selten1986-uc, Andreoni1993-ys, Cooper1996-be, ledyard1994public, Kim1984-wm, Isaac1985-qz, Andreoni2008-ec}. This declining trend in the Public Goods Game is often, and arguably best, explained by conditional preferences. The evidence was provided by \citet{Fischbacher2001}, who collects conditional choices of subjects to the common pool by using the strategy method. According to their results, most of the participants reveal a preference pattern, in which they will only contribute if the others contribute as well, albeit with a \textit{selfish bias}; they tend to contribute less to the public pool than the the average contribution by others. Those type of conditional strategies is not sufficient to sustain cooperation, as contributions tend to decline over time\citep{Fischbacher2010}.
 
-Nevertheless, with the rise of experimental economics, empirical evidence on the Prionser's Dilemma and the Public Goods Game draws a rather different picture: the contributions tend to decline over time, whether subjects play the game within the same group or matched with others \citep{Selten1986-uc, Andreoni1993-ys, Cooper1996-be, ledyard1994public, Kim1984-wm, Isaac1985-qz, Andreoni2008-ec}. This declining trend in the Public Goods Game is often, and arguably best, explained by conditional preferences. Clear evidence is provided by \citet{Fischbacher2001}, who collects conditional choices of subjects to the common pool by using the strategy method. According to their results, most of the participants reveal a preference pattern, in which they will only contribute if the others contribute as well, albeit with a \textit{selfish bias}; they tend to contribute less to the public pool than the others. Those type of conditional cooperation is not sufficient to sustain cooperation, as contributions tend to decline over time\citep{Fischbacher2010}.
+In this study, I aim to investigate the conditional preferences in the framework of \citet{Fischbacher2001}, using computational methods. I examine the evolutionary success of those conditional strategies in a social dilemma with a simplified framework.  I create populations of agents with the types drawn from of the set of all conditional strategies within our framework. Each agent randomly pairs with another agent to interact in this social dilemma, and continues to interact with probability $\delta$. I let an evolutionary reproduction mechanism based on the success of the strategies shape the population structure and I examined success of those strategies for different continuation probabilities $\delta$. 
 
-In this study, we aim to investigate the conditional preferences in the framework of \citet{Fischbacher2001}, using computational methods. We examine the evolutionary success of those conditional strategies in a social dilemma with a simplified framework.  We create populations of agents with the types drawn from of the set of all conditional strategies within our framework. Each agent randomly pairs with another agent to interact in this social dilemma, and continues to interact with probability $\delta$. We let an evolutionary reproduction mechanism based on the success of the strategies shape the population structure and we examined success of those strategies for different continuation probabilities $\delta$. 
+Our results can be summarized as follows: selfish and close-to-selfish conditional cooperators are likely to be successful when the repetition probability is relatively low. Depending on the value of continuation probability, imperfect conditional cooperators who only fully cooperate when the opponent fully cooperates, perfect-conditional cooperators, and agents with hump-shaped contribution schedule are relatively successful when the repetition probability is sufficiently high. Unconditionally cooperating strategies are unlikely to survive even at high probabilities of repetition. And finally I conclude that the initial move aligned with the conditional strategy plays a crucial role in the survival of those conditional strategies.
 
-Our results can be summarized as follows: selfish and close-to-selfish conditional cooperators are likely to be successful when the repetition probability is relatively low. Depending on the value of continuation probability, imperfect conditional cooperators who only fully cooperate when the opponent fully cooperates, perfect-conditional cooperators, and agents with hump-shaped contribution schedule are relatively successful when the repetition probability is sufficiently high. Unconditionally cooperating strategies are unlikely to survive even at high probabilities of repetition. And finally we conclude that the initial move aligned with the conditional strategy plays a crucial role in the survival of those conditional strategies.
+\subsection{Conditional Cooperation and Evolutionary Game Theory}
 
-\section{Literature Review}
-
-Conditional cooperation has been attracting interest in economics, especially after the seminal work of \citet{Fischbacher2001} who conducted a Public Goods experiment that gave subjects the chance to choose the contribution amount to the public pool according to the average contribution of the others. According to the contribution schedule, they classified subjects as follows: \textit{conditional cooperators}, who increase their contributions with the increasing amount of average contribution of others; \textit{selfish players}, who contribute nothing to the public pool regardless of what others do; and \textit{hump-shaped contributors}, who increase their contribution up to a certain level, most commonly to halfway to the maximum contribution, only to decrease their contributions after that level, as the contributions of others continue to increase. \textit{Unconditional cooperators} were virtually absent in their experiment. Fischbacher, G{\"a}chter and Fehr concluded that most of the subjects are selfish-biased conditional cooperators. In a follow-up study, \citet{Fischbacher2010} showed the dynamics of such contribution patterns, which predict the decline in Public Goods Games. Those conditional strategies defined by Fischbacher can be investigated in the class of reactive strategies, as they only consider the previous move (or, in the simultaneous case, the current move) of the player(s) with whom they interact. 
-
-Possibly because rational and self-interested agents have been central in economic methodology, early models based on conditional strategies were investigated in disciplines other than economics, which employ game-theoretical approaches, such as biology and political science. Axelrod's research showed the success of \textit{tit-for-tat}, a strategy beginning with cooperation in the initial interaction and then copying its opponent's from the previous period \citep{Axelrod1980a, Axelrod1980b, Axelrod1981-ot}.  A tit-for-tat strategy in a Fischbacher-G{\"a}chter framework would be  equivalent to a perfect-conditional-cooperation strategy that matches the individual's contribution to the contribution by others. One should expect this kind strategy to be employed in real-life decisions due to the success of tit-for-tat strategy. In the experiments, however, perfect-conditional-cooperators are outnumbered by imperfect conditional cooperators who tend to give less than what others give. Reciprocity by imperfect conditional cooperators not enough to sustain cooperation, not just within other commonly observed conditional types, but also when they interact among each other \citep{Fischbacher2010}.  Moreover, later results showed that the tit-for-tat strategy was vulnerable when mistakes happen: when an accidental decline occurs, tit-for-tat was not able to reestablish cooperation back again, unless another mistake corrected it \citep{Hirshleifer1988-fh, Selten1984-sb, Fundenberg1990-up, Nowak1993-gl}.
+Possibly because rational and self-interested agents have been central in economic methodology, early models based on conditional strategies were investigated in disciplines other than economics, which employ game-theoretical approaches, such as biology and political science. Axelrod's research showed the success of \textit{tit-for-tat}, a strategy beginning with cooperation in the initial interaction and then copying its opponent's from the previous period \citep{Axelrod1980a, Axelrod1980b, Axelrod1981-ot}.  A tit-for-tat strategy in a Fischbacher-G{\"a}chter framework would be  equivalent to a perfect-conditional-cooperation strategy that matches the individual's contribution to the contribution by others. One should expect this kind strategy to be employed in real-life decisions due to the success of tit-for-tat strategy. In the experiments, however, perfect-conditional-cooperators are outnumbered by imperfect conditional cooperators who tend to give less than what others give. Reciprocity by imperfect conditional cooperators is not enough to sustain cooperation, not just within other commonly observed conditional types, but also when they interact among each other \citep{Fischbacher2010}.  Moreover, later results showed that the tit-for-tat strategy was vulnerable when mistakes happen: when an accidental decline occurs, tit-for-tat was not able to reestablish cooperation back again, unless another mistake corrected it \citep{Hirshleifer1988-fh, Selten1984-sb, Fundenberg1990-up, Nowak1993-gl}.
 
 
 A related line of research with conditional strategies was mostly investigated in biology. So-called ``variable investment models'' provided more insights into successful conditional-like strategies in social dilemmas. These models differ considerably from conditional strategies defined in a Fischbacher-G{\"a}cther framework, as well as from each other by their assumptions; therefore it is not straightforward to compare their results.\footnote{See \citet{Sherratt2002-lx} for a review of some early papers.} For instance,  in \citet{Doebeli1998-cw}, the agents are characterized by two parameters; a parameter that defines the unconditional altruism, and another defining the amount of reciprocation proportional to the difference between one's own altruism and that of the other. In their setup, they use a continuous altruistic investment game in which the marginal benefit of altruism  decreases.  Their evaluation of the success of their strategies takes pairwise comparison into account with the mutants of that strategy. They show that, unless a spatial structure is assumed, selfish types are the most successful ones. \citet{Roberts1998-es} use a different agent definition in which costs and benefits are linear and investments can increase. They take representative strategies for a tournament: \textit{Non-altruistic} agents, who do not invest at all; \textit{Give-as-good-as-you-get} strategies, which invest as much as the other; \textit{raise-the-stake} strategies, amplifying the investment, \textit{short-changer} strategy, which gives less to the other than what the other gives, \textit{all-or-nothing} strategy, which gives an amount and amplifies it only if other reciprocates as much or more. Roberts and Sheratt find that the raise-the-stake strategy is a stable cooperator as it cautiously invests but repeated interactions allow it to reach high cooperation levels.
@@ -126,23 +122,24 @@ Therefore our study aims to fill this gap by demonstrating the success and estim
 
 \section{Methods}
 
-Our model has certain differences compared to those models in the literature which we referred in the previous section. First, we choose a setup that is closer to a standard economics framework, in the sense that we do not assume a population structure, but instead use uniform random matching procedure for our agents. However our simulations can easily be extendable to such population structures. Second, we use a minimal setup which allows us to observe conditional strategies, ad defined by Fischbacher \& G{\"a}chter framework, and which avoids unnecessary computational complexities. We use an iterated Prisoners Dilemma with three strategies and discrete linear response functions that do not assume or limit the shape of our response functions. Moreover, we also control for the initial reactions, as it is often stressed that they play an important role on the path of the dynamics. In this section, we start by explaining the social dilemma framework we use, and then we give details of the evolutionary model we use. And we finally describe the outcome variables we are interested in. 
+This study focuses on the conditional strategies in a two-player social dilemma. This our model has certain differences compared to those models in the literature which we referred in the previous section. First, we choose a setup that is closer to a standard game theoretical framework, in the sense that we do not assume a population structure, but instead use uniform random matching procedure for our agents. However our simulations can easily be extendable to such population structures. Second, we use a minimal setup which allows us to observe conditional strategies, ad defined by Fischbacher \& G{\"a}chter framework and we avoid unnecessary computational complexities. We use an iterated Prisoners Dilemma with three strategies and discrete linear response functions that do not assume or limit the shape of our response functions. Moreover, we also control for the initial reactions, as it is often stressed that they play an important role on the path of the dynamics. In this section, we start by explaining the social dilemma framework we use, and then we give details of the evolutionary model we use. And we finally describe the outcome variables we are interested in. 
 
 \subsection{Linear Extension of the Iterated Prisoner's Dilemma} 
  We use an extension of the Prionser's Dilemma game Three-Actions Sequential Prisoner’s Dilemma (3SPD) \citep{andreozzi2020stability}. In this extended game, the three actions represent different cooperation levels: $L$(Low) refers to no cooperation/defection; $M$(Medium) refers to an intermediate cooperation level; and $H$(High) refers to full cooperation.  
 
 The cost of cooperation is $c$, while the benefit of cooperation to the opponent is $b$, with the constraint $b>c>0$. If an agent plays the strategy $L$, he keeps his endowment for himself and no change will occur in payoff of the opponent. If agent plays the strategy $H$, he pays the cost $c$ and his opponent gets the benefit $b$. If the player plays $M$, he will only pay the half the amount of the cost of full cooperation but the benefit to the opponent will be half as much as well, i.e., the agent pays a cost of $c/2$, while the opponent gets the benefit $b/2$. 
 
-If the agents were to decide simultaneously, the game matrix would be as shown in \Cref{tbl:evo-game-normal}. For our simulations, we used the following parameters: the cost of cooperation $c$ is equal to 1, the benefit of cooperation $b$ is equal to 2, and we set the base payoff to $1$ to avoid negative payoffs. The normal-form representation of the game with those parameters is shown in \Cref{tbl:evo-game-normal-par}.
+The normal-form representation of the game is shown in \Cref{tbl:evo-game-normal}. For the simulations, I used the following parameters: the cost of cooperation $c$ is equal to 1, the benefit of cooperation $b$ is equal to 2, and we set the base payoff to $1$ to avoid negative payoffs. The normal-form representation of the game with those parameters is shown in \Cref{tbl:evo-game-normal-par}.
 
 
 \begin{table}[H]
 \centering
+\def\arraystretch{1.2}
 \setlength{\extrarowheight}{2pt}	\resizebox{0.67\textwidth}{!}{
 \begin{tabular}{cc|c|c|c|}
-& \multicolumn{1}{c}{} & \multicolumn{3}{c}{Player $2$}\\
+& \multicolumn{1}{c}{} & \multicolumn{3}{c}{Player 2}\\
 & \multicolumn{1}{c}{} & \multicolumn{1}{c}{$L$}  & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$H$}  \\\cline{3-5}
-\multirow{3}*{Player $1$}  & $L$ & $(0,0)$ & $(\frac{b}{2},-\frac{c}{2})$ & $(b,-c)$ \\\cline{3-5}
+\multirow{3}*{Player 1}  & $L$ & $(0,0)$ & $(\frac{b}{2},-\frac{c}{2})$ & $(b,-c)$ \\\cline{3-5}
 & $M$ &  $(-\frac{c}{2},\frac{b}{2})$ &  $(\frac{b-c}{2},\frac{b-c}{2})$ &  $(b - \frac{c}{2}, \frac{b}{2}-c)$ \\\cline{3-5}
 & $H$ & $(-c, b)$ & $(\frac{b}{2}-c,b - \frac{c}{2})$ & ($b-c$, $b-c$) \\\cline{3-5}
 
@@ -171,7 +168,7 @@ If the agents were to decide simultaneously, the game matrix would be as shown i
 \label{tbl:evo-game-normal-par}
 \end{table}
 
-In order to investigate conditional strategies in terms of the effect reciprocity on cooperation, we used a sequential game setting based on the iterated Prisoner's Dilemma. In our game, for each pair, one of the players is randomly selected as the first mover and makes the initial move. At this point, the agent will bear the cost of his or her action, and the opponent will benefit from this action, if any. 
+In order to investigate conditional strategies in terms of the effect reciprocity on cooperation, we used a sequential game setting based on the iterated Prisoner's Dilemma. In our game, for each pair, one of the players is randomly selected as the first mover and makes the initial move. At this point, the agent will bear the cost of his or her action and the opponent will benefit from this action, if any. 
 
 We use an infitely repeated game approach to the iterated Prisoner's Dilemma Game: After each round, the game continues with the probability of repetition $\delta$. 
 
@@ -304,12 +301,11 @@ The latter one, however is a more interesting case. The reason begind the succes
 
 
 
-\section{Discussion}
+\section{Conclusion}
  
-In this study, we investigated the emergence of cooperation and relative success of conditional strategies in an extension of iterated Prionser's Dilemma. Some of the results we obtain provide supporting evidence for the previous results in a different setting. For instance, the oscillations between defection and two levels of cooperation were expected in the light of previous studies \citep{Wahl1999-nn, Nowak1989-vx, Bendor1995-zf, Imhof2005-ti, Van_Veelen2012-xf, Garcia2016-tr, Van_Veelen2012-xf}. Also, the initial strategy is indeed decisive for the success of a type \citep{Wahl1999-zi, Wahl1999-nn}. Our results suggest that the initial moves should be in accordance with the action where a strategy is most successful within itself. 
+In this study, I investigated the emergence of cooperation and relative success of conditional strategies in a Three Actions Prionser's Dilemma (3PD). Some of the results we obtain provide supporting evidence for the previous results in the literature. For instance, the oscillations between defection and two levels of cooperation were expected in the light of previous studies \citep{Wahl1999-nn, Nowak1989-vx, Bendor1995-zf, Imhof2005-ti, Van_Veelen2012-xf, Garcia2016-tr, Van_Veelen2012-xf}. Moreover, the initial strategy is indeed decisive for the success of a conditional strategy \citep{Wahl1999-zi, Wahl1999-nn}. 
 
-
-The most successful types considering all possible continuation probabilities are: selfish and relatively selfish types that start with defection($L$); hump-shaped and conditional cooperator type which has the conditional response $LMM$ that start with $M$; and all-or-nothing and perfect-conditional-cooperator types that start with $H$. Those types outperform other types who have the same conditional strategy but a different initial move. Those results suggest that strategies with a non-aligned initial move fail to reach the interaction cycle where they would profit most. 
+The results suggest that, for a conditionally cooperative strategy to be successful, the initial moves should be in accordance with the action where a strategy is most successful against itself. The most successful types considering all possible continuation probabilities are: selfish and relatively selfish types that start with defection($L$); hump-shaped and conditional cooperator type which has the conditional response $LMM$ that start with $M$; and all-or-nothing and perfect-conditional-cooperator types that start with $H$. Those types outperform other types who have the same conditional strategy but a different initial move. Those results suggest that strategies with a non-aligned initial move fail to reach the interaction cycle where they would profit most. 
 
 A particularly surprising result concerns hump-shaped contributors. Those types are often observed in experiments in which conditional preferences are elicited. They are indeed the most common types after conditional cooperators and selfish types in those experiments. It is hard to rationalize this kind of strategy which can be counter-intuitive. At a first glance as they would fail fully to exploit others while not being able to cooperate at a maximum level,  but rather stuck in a medium level of cooperation. However our results suggest that as they are able to exploit mistakes made by their opponents better than the cooperative types and they do relatively better than non-cooperative types, it gives a relative advantage where the continuation probability is moderate. If we also consider the case where repetition probability changes over time, we can expect those types to do relatively better than the others. Our setup might be misleading though; since we have three levels, a monotonic increase or a monotonic decrease is not possible around the intermediate cooperation. What should one expect if there were more levels of cooperation? Possibly the answer depends on the structure of mistakes: If we assume mistaken moves to similar actions are more likely, then mistaken moves to actions that are far from the outcome of the response function,and then we might expect those monotonic increments and decreases. Due to computational complexities of this expansion creat, we seek for further research to confirm this hypothesis. 
 
