--- a/thesis.bib
+++ b/thesis.bib
@@ -24,6 +24,19 @@ year = {1988}
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
+@article{may1987more,
+  title={More evolution of cooperation},
+  author={May, Robert M},
+  journal={Nature},
+  volume={327},
+  number={6117},
+  pages={15--17},
+  year={1987},
+  publisher={Springer}
+}
+
+
+
 @article{Axelrod1980b,
   title={More Effective Choice in the Prisoner's Dilemma},
   author={Axelrod, Robert},
@@ -98,6 +111,17 @@ year = {1988}
   pages={35--54},
   year={2005},
   publisher={Springer}
+}
+
+@article{nowak1992tit,
+  title={Tit for tat in heterogeneous populations},
+  author={Nowak, Martin A and Sigmund, Karl},
+  journal={Nature},
+  volume={355},
+  number={6357},
+  pages={250--253},
+  year={1992},
+  publisher={Nature Publishing Group}
 }
 
 @article{Burton-Chellew2016,
