--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@
 
 
 \author{Ali Seyhun Saral\thanks{Max Planck Institute for Research on Collective Goods, Bonn, Germany.}}  
-\date{September 2020}
+\date{October 2020}
 \begin{document}
 \onehalfspacing
 \sloppy
@@ -65,20 +65,19 @@
 
 \thispagestyle{plain}
 
-Conditional cooperation has been a common explanation for the observed cooperation, and its decline in social dilemma experiments. Numerous studies showed that most of the experimental subjects can be categorized into three types: conditional cooperators, self-maximizers and hump-shaped (triangle) cooperators. 
+Conditional cooperation has been proposed as a common factor for the observed cooperation, and its decline in social dilemma experiments. Numerous studies showed that most of the experimental subjects can be categorized into three types: conditional cooperators, self-maximizers and hump-shaped (triangle) cooperators. 
 
 In this study, I investigate conditional strategy types and their role on the emergence of cooperation and their evolutionary success. For this purpose, I use an extension of the Iterated Prisoner's Dilemma Game. The agents are characterized by their initial move and their conditional responses to each level of cooperation. By using simulations, I estimate the likelihood of cooperation for different probability of continuations.
 
-I show that, when the continuation probability is sufficiently large, high levels cooperation is achieved. In this case, the most successful strategies are those who employ an \textit{all-or-none} type of conditional cooperation, followed by perfect conditional cooperators. In intermediate levels of continuation probabilities, however, \textit{hump-shaped} contributor types are the ones that are most likely to thrive, followed by imperfect conditional cooperators. Those agents cooperate in a medium level of cooperation within themselves and each other. The results explain the existence of hump-shaped type of cooperators with a purely payoff-based reasoning, as opposed to previous attempts to explain this strategy with psychological mechanisms. 
+I show that, when the continuation probability is sufficiently large, a high level of cooperation is achieved. In this case, the most successful strategies are those who employ an \textit{all-or-none} type of conditional cooperation, followed by perfect conditional cooperators. When the continuation probability is in an intermediate level, however, \textit{hump-shaped} contributor types are the ones that are most likely to thrive, followed by imperfect conditional cooperators. Those agents cooperate at a medium level of cooperation within themselves and each other. The results explain the existence of hump-shaped type of cooperators with a purely payoff-based reasoning, as opposed to previous attempts to explain this strategy with psychological mechanisms. 
 
 \textbf{Keywords}: reciprocity | conditional cooperation | reactive strategies | hump-shaped contributors 
 \end{abstract}
 
 \section*{Introduction} 
-Humans are distinct in their cooperation capabilities, if not unique \citep[See][]{Bowles2011,Wilson2012}. As a species, we heavily depend on the mutual cooperation of individuals. At first glance, from an evolutionary perspective, it seems counter-intuitive for individuals to cooperate in an enviroment in which cooperation is coslty and free riding is possible: any fraction of free-riders would do better than those who cooperate, and would therefore have a higher evolutionary fitness. As it would be easy to exploit the cooperators in such a population, it is just matter of time for cooperation to be eradicated. Then, how come cooperation is so common in some species including us humans?
+Humans are distinct in their cooperation capabilities, if not unique \citep[See][]{Bowles2011,Wilson2012}. As a species, we heavily depend on the mutual cooperation of individuals. At first glance, from an evolutionary perspective, it seems counter-intuitive for individuals to cooperate in an enviroment in which cooperation is costly and free riding is beneficial: any fraction of free-riders would better beter off than those who cooperate, and would therefore have a higher evolutionary fitness. Since it would be easy to exploit the cooperators in such a population, it is just matter of time for cooperation to be eradicated. Then, how come cooperation is so common in some species including us humans?
 
-Several theories have been put forward to explain this puzzle.\footnote{See \citet{Nowak2006} for a summary of some of these mechanisms.} One of the most prominent answers has been reciprocal altruism \citep{Trivers1971, Axelrod1981-ot, may1987more, nowak1992tit,Nowak1993-gl}. 
-Given that there is a positive probability for individuals to interact again, if the benefit of an aid is sufficiently greater than its cost, then cooperation of unrelated individuals can arise. In game theory literature, Folk theorems show that, if the threat of defection is present in the future, cooperating today is more beneficial; therefore, a cooperative strategy in the stage game, as well as any other individually rational strategy, can be the equilibrium of the supergame \citep{Friedman1971-nz, Fudenberg1986-dz}. In addition to that, \citeauthor{Axelrod1980a}'s simulations on the Prisoner's Dilemma  support those theoretical results by showing that the reciprocal \textit{tit-for-tat} is a strong strategy that allows cooperation while it is immune to exploitation by selfish players \citep{Axelrod1980a,Axelrod1980b,Axelrod1981-ot}. 
+Several theories have been put forward to explain this puzzle.\footnote{See \citet{Nowak2006} for a summary of some of these mechanisms.} One of the most prominent answers has been reciprocal altruism \citep{Trivers1971, Axelrod1981-ot, may1987more, nowak1992tit,Nowak1993-gl}. Given that there is a positive probability for individuals to interact again, if the benefit of an aid is sufficiently greater than its cost, then cooperation of unrelated individuals can arise. In game theory literature, Folk theorems show that, if the threat of defection is present in the future, cooperating today is more beneficial; therefore, a cooperative strategy in the stage game, as well as any other individually rational strategy, can be the equilibrium of the supergame \citep{Friedman1971-nz, Fudenberg1986-dz}. Moreover, \citeauthor{Axelrod1980a}'s simulations on the Prisoner's Dilemma support those theoretical results by showing that the reciprocal \textit{tit-for-tat} is a strong strategy that allows cooperation while it is immune to exploitation by selfish players \citep{Axelrod1980a,Axelrod1980b,Axelrod1981-ot}. 
 
 With these scientific accounts, a rather optimistic picture of cooperation through reciprocity has been drawn. The main dynamics of cooperation through reciprocity can be summarized as follows: reciprocators cooperate among each other as they reciprocate kindness over time. Therefore they receive a higher payoff than the selfish types who meet other selfish types. And when a reciprocator meets a selfish type, the reciprocator responds selfishly after the first defection. Thus, the exploitation of a reciprocator by a selfish individual is not sustainable when the probability of future interaction is sufficiently high. 
 
