bugfix and add recent henrich muthukrishna paper

--- a/thesis.bib
+++ b/thesis.bib
@@ -2021,3 +2021,12 @@ url={https://doi.org/10.1038/s41562-018-0385-5}
 }
 
 
+@article{henrich2021origins,
+  title={The origins and psychology of human cooperation},
+  author={Henrich, Joseph and Muthukrishna, Michael},
+  journal={Annual Review of Psychology},
+  volume={72},
+  pages={207--240},
+  year={2021},
+  publisher={Annual Reviews}
+}
